@@ -7,6 +7,7 @@ from .default_values import PatchDXCreateContentInContainer
 from .default_values import PatchInvokeFactory
 from .default_values import PatchTransmogrifyDXSchemaUpdater
 from .default_values import PatchZ3CFormChangedField
+from .default_values import PatchZ3CFormWidgetUpdate
 from .default_values import PatchDeserializeFromJson
 from .filter_trashed_from_catalog import PatchCatalogToFilterTrashedDocs
 from .history_handler_tool import PatchCMFEditonsHistoryHandlerTool
@@ -38,6 +39,7 @@ PatchTransmogrifyDXSchemaUpdater()()
 PatchWebDAVLockTimeout()()
 PatchZ2LogTimezone()()
 PatchZ3CFormChangedField()()
+PatchZ3CFormWidgetUpdate()()
 PatchDeserializeFromJson()()
 PatchCMFCatalogAware()()
 PatchOFSRoleManager()()
