@@ -5,6 +5,7 @@ Changelog
 2018.4.0 (unreleased)
 ---------------------
 
+- Make sure widgets properly return persisted missing values for optional fields with default values [lgraf]
 - Fix oc loading icon since fontawesome update. [Kevin Bieri]
 - Sharing views: Show userdetails also in an overlay. [phgross]
 - Show assignments info button only on rows with automatic roles. [phgross]
